--- a/package.json
+++ b/package.json
@@ -11,20 +11,24 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.74.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "axios": "^1.8.4",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "recoil": "^0.7.7",
-    "styled-components": "^6.1.17"
+    "styled-components": "^6.1.17",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
     "@tanstack/eslint-plugin-query": "^5.73.3",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/eslint__js": "^9.14.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
+    "@typescript-eslint/parser": "^8.30.1",
     "@vitejs/plugin-react": "^4.3.4",
     "babel-plugin-styled-components": "^2.1.4",
-    "eslint": "^9.22.0",
+    "eslint": "^9.24.0",
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.6",
@@ -32,8 +36,9 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "ts-node": "^10.9.2",
-    "typescript": "~5.7.2",
+    "typescript": "^5.8.3",
     "typescript-eslint": "^8.26.1",
     "vite": "^6.3.1"
   },
