--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@heroicons/react": "^2.2.0",
     "@tanstack/react-query": "^5.74.4",
     "axios": "^1.8.4",
     "react": "^19.1.0",
